Add canvas and constant droping

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>tetris</title>
+        <title>Tetris</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -25,7 +25,7 @@
 
         <div class="hero-unit">
           <h1 class="text-center">Tetris</h1>
-          <pre class="text-center" id="tetris"></pre>
+          <canvas class="text-center" id="myCanvas"></canvas>
         </div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
